Small improvement to index.html! Big changes coming soon!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Hi :D</h1>
+    <p>Welcome to the Club! (coming soon!)</p>
   </body>
 </html>
