--- a/index.html
+++ b/index.html
@@ -8,3 +8,8 @@
     <p>Welcome to the Club! (coming soon!)</p>
   </body>
 </html>
+<style>
+    body {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+</style>
